# cranfield-ros2-drone-ws

./: .gitignore  README.md
gym-drones/: pyproject.toml  requirements.txt  train.py  train.sh  train_v2.py
gym-drones/drone_env/: docu.md
gym-drones/drone_env/envs/: drone_env_test.py  flight_arena.py  flight_arena_v1.py
gym-drones/drone_env/envs/utils/: gz_transport_misc.py  transport_helpers.py  wait_for_clock.py  wait_for_clock_helper.py  world_control_helper.py
gz_rl/: pyproject.toml
gz_rl/gz_gym/sim/: clock_helper.py  gz_interface.py
src/my_drone_sim/: CMakeLists.txt  package.xml
src/my_drone_sim/config/: bridge_topics.yaml
src/my_drone_sim/launch/: my_world.launch.py  my_world_new.launch.py
src/my_drone_sim/models/OakD-Lite/: model.sdf
src/my_drone_sim/models/flight_arena/: Flight_arena_3.dae  Flight_arena_3.stl  model.sdf
src/my_drone_sim/models/gimbal/: model.sdf
src/my_drone_sim/models/goal/: model.config
src/my_drone_sim/models/green_box/: model.config  model.sdf
src/my_drone_sim/models/lawnmower/: model.sdf
src/my_drone_sim/models/lidar_2d_v2/: model.sdf
src/my_drone_sim/worlds/: drone_scenario.sdf  drone_scenario2.sdf  flight_arena.sdf  flight_arena_objects.sdf  ionic_interior.sdf  simple_map.sdf
src/x500_simulator/: CMakeLists.txt  README.md  package.xml
src/x500_simulator/config/: bridge_topics.yaml  rviz_config.rviz  x500.urdf
src/x500_simulator/hooks/: setup.dsv.in
src/x500_simulator/launch/: launch_sim.launch.py
src/x500_simulator/worlds/: flight_arena.sdf  forest.sdf  simple_map.sdf  warehouse_world.sdf
(+23 files in other folders)
