[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gz-rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "stable-baselines3>=2.3.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gz_gym*"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
